--- a/codeup_design.html
+++ b/codeup_design.html
@@ -52,12 +52,12 @@
       </nav> <!--End Top Nav Bar -->
 
   <div class="container-fluid">  <!-- Main page content Start -->
-    <div class="header">  <!--Main Header Start-->
+    <div class="header">  <!--Main Title Start-->
       <div class="row">
         <h1 class="anton">VISUAL DESIGN & WEB DEVELOPMENT</h1>
         <h2 class="anton">FROM PARK CITY, UTAH</h2>
       </div>
-    </div> <!-- Main Header End -->
+    </div> <!-- Main Title End -->
     <section class="container icons anton"><!--   Design/Develop/Support/Host Icons - Main-->
       <div class="row">
         <div class="col-sm-12 d-flex justify-content-center col-md-6 d-flex justify-content-md-end p-2">
